overflow fix

--- a/style.css
+++ b/style.css
@@ -46,6 +46,7 @@ header > nav{
     justify-content: center;
     align-items: center;
     flex-basis: 100%;
+    overflow-x: unset;
 
 }
 
